Footer spacing fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -122,18 +122,18 @@
 }
 
 .footer-col-1 {
-  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-  width:         calc(35% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(33% - (#{$spacing-unit} / 2));
+  width:         calc(33% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-  width:         calc(20% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(24% - (#{$spacing-unit} / 2));
+  width:         calc(24% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
-  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-  width:         calc(45% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(43% - (#{$spacing-unit} / 2));
+  width:         calc(43% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
